--- a/android/Nile/app/src/main/AndroidManifest.xml
+++ b/android/Nile/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:debuggable="true"
+
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
@@ -19,6 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data android:name="com.here.android.maps.appid" android:value="BdJCV1gAjGDkP2dixWRu"/>
+        <meta-data android:name="com.here.android.maps.apptoken" android:value="MV0PdJIEhcOYveK3eILRUA"/>
     </application>
 
 </manifest>
