--- a/android/Nile/app/build.gradle
+++ b/android/Nile/app/build.gradle
@@ -31,3 +31,6 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.code.gson:gson:2.3.1'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
