--- a/android/Nile/app/build.gradle
+++ b/android/Nile/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.firebase:firebase-messaging:9.0.0'
 }
 
 
