--- a/android/Nile/app/src/main/AndroidManifest.xml
+++ b/android/Nile/app/src/main/AndroidManifest.xml
@@ -47,7 +47,11 @@
         </service>
 
         <activity android:name=".DelivererRegisterActivity" />
-        <activity android:name=".UserRegisterActivity"></activity>
+        <activity android:name=".UserRegisterActivity" />
+        <activity android:name=".MapActivity"></activity>
+
+        <meta-data android:name="com.here.android.maps.appid" android:value="BdJCV1gAjGDkP2dixWRu"/>
+        <meta-data android:name="com.here.android.maps.apptoken" android:value="MV0PdJIEhcOYveK3eILRUA"/>
     </application>
 
 </manifest>
